<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>order-manager</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>

      <plugin>
        <artifactId>formatter-maven-plugin</artifactId>
        <configuration>
          <configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
          <lineEnding>LF</lineEnding>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
            <id>format-on-compile</id> <!-- Runs before compile -->
            <phase>process-sources</phase>
          </execution>
        </executions>
        <groupId>net.revelc.code.formatter</groupId>
        <version>2.23.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <dependencies>
    <!-- Web + JPA + DB -->
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Flyway for database migrations - Updated for PostgreSQL 18 support -->
    <!-- 1. Support for PostgreSQL 18 (Crucial) -->
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
      <version>11.19.1</version> <!-- Supports PostgreSQL 18 wire protocol -->
    </dependency>

    <!-- 2. Support for MySQL 8.0+ (for dev environment) -->
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-mysql</artifactId>
      <version>11.19.1</version>
    </dependency>

    <!-- 3. Core Engine (Must match above version) -->
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
      <version>11.19.1</version>
    </dependency>

    <!-- 3. JDBC Driver (42.7.3 is fine, but 42.7.5+ is recommended for PG18) -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.5</version>
      <scope>runtime</scope>
    </dependency>

    <!--        &lt;!&ndash; H2 in-memory database &ndash;&gt;-->
    <!--        <dependency>-->
    <!--            <groupId>com.h2database</groupId>-->
    <!--            <artifactId>h2</artifactId>-->
    <!--            <scope>runtime</scope>-->
    <!--        </dependency>-->

    <!-- MySQL Database (Dev) -->
    <dependency>
      <artifactId>mysql-connector-j</artifactId>
      <groupId>com.mysql</groupId>
      <scope>runtime</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>

    <!-- UI Integration -->
    <dependency>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Swagger -->
    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>2.6.0</version>
    </dependency>

    <!-- Devtools for Rerun -->
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>

    <!-- For Security -->
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- For Thymeleaf Security Understanding -->
    <dependency>
      <artifactId>thymeleaf-extras-springsecurity6</artifactId>
      <groupId>org.thymeleaf.extras</groupId>
    </dependency>


    <!-- For Password Encryption -->
    <dependency>
      <artifactId>spring-security-crypto</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>


    <!-- Testing -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>

    <!-- Email Verification -->
    <dependency>
      <artifactId>spring-boot-starter-mail</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- HTTP Client for Brevo API -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>

    <!-- Actuator for health checks and monitoring -->
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- AOP for centralized method execution logging -->
    <dependency>
      <artifactId>spring-boot-starter-aop</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Country-aware phone number parsing and validation -->
    <dependency>
      <groupId>com.googlecode.libphonenumber</groupId>
      <artifactId>libphonenumber</artifactId>
      <version>8.13.55</version>
    </dependency>
  </dependencies>
  <description>Spring Boot executable application for managing client orders end-to-end
  </description>
  <groupId>com.example</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>Order Manager</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.3.0</version> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <java.version>17</java.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
